Project_File/kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: suleymanakturk-anasayfa
  name: suleymanakturk-anasayfa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: suleymanakturk-anasayfa
  template:
    metadata:
      labels:
        app: suleymanakturk-anasayfa
    spec:
      containers:
        - image: 'env(image)'
          name: suleymanakturk-anasayfa
