Project_File/kubernetes-files/service_template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: suleymanakturk-anasayfa
  name: suleymanakturk-anasayfa
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: suleymanakturk-anasayfa
